Updated to create a exclusion list

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -8,3 +8,8 @@ jobs:
     - uses: actions/checkout@master
     - name: linkchecker
       uses: cam-barts/linkchecker-action@master
+    - name: Upload exclusion list as an artifact
+      uses: actions/upload-artifact@v1
+      with:
+        name: exclude_links.json
+        path: exclude_links.json
